--- a/components/avatar.html/avatar.html
+++ b/components/avatar.html/avatar.html
@@ -21,7 +21,7 @@
     <div class="container">
         <nav class="nav-bar ">
             <div class="left-side">
-                <a href="index.html">GALA<span class="span">X!A</span></a>
+                <a href="../../index.html">GALA<span class="span">X!A</span></a>
 
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -80,23 +80,20 @@
                 <div class="content-title">
                     Avatar
                 </div>
-                <nav class="drawer-navigation1  ">
-                    <a href="">Size Avatar</a>
-                    <a href="">Square Avatar</a>
-                    <a href="">Border Size Avatar</a>
-                </nav>
 
                 <div class="content-subtitle">
-                    Avatars are user profile pictures, usually found in circular shapes. Avatars can be used for
-                    'container' objects — projects, spaces, repositories, etcetera — to give them a recognisable visual
-                    identity.
+                    Avatar can be used to show user's profile picture or their status on different platforms.
+                    Simple Avatars can be created using <code>avatar</code>  class.Avatars are user profile pictures,
+                    usually found in circular shapes.Avatars help people create their
+                    own identity.
                 </div>
 
+                <!-- avatar -->
+                <h2>Size Avatars:</h2>
                 <div class="content-subtitle">
-                    Size of the avatars can be changed by adding <code>sm | md | lg</code> class to the existing avatar
+                    Size of the avatars can be changed by adding <code>size-larger/size-larger</code> class to the existing avatar
                     class.
                 </div>
-                <!-- avatar -->
                 <div class="code-container">
                     <div>
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar">
@@ -108,10 +105,13 @@
                 <div class="iframe-code">
                     <script src="https://gist.github.com/stutisk/a1be5534a48586e699eaddf0366ed13e.js"></script>
                 </div>
+
+                <h2>Square Avatars:</h2>
                 <div class="content-subtitle">
-                    Size of the avatars can be changed by adding <code>sm | md | lg</code> class to the existing avatar
+                    Shape of the avatars can be changed by adding <code>square</code>class to the existing avatar
                     class.
                 </div>
+
                 <div class="code-container">
                     <div>
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar square">
@@ -120,23 +120,32 @@
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-largest square">
                     </div>
                 </div>
-                <!-- <div> <h1> sqaure Size avatar</h1>
-                           <img src="https://picsum.photos/id/1/80/120" alt="Avatar"  class="avatar square" >
-                           <img src="https://picsum.photos/id/1/80/120" alt="Avatar "  class="avatar size-large square" >
-                           <img src="https://picsum.photos/id/1/80/120" alt="Avatar"  class="avatar size-larger square" >
-                           <img src="https://picsum.photos/id/1/80/120" alt="Avatar"  class="avatar size-largest square" >
-                        </div>
-                   
-                       <div> <h1> border Size avatar</h1>
-                           <img src="https://picsum.photos/id/1/80/120" alt="Avatar"  class="avatar size-larger border-green" >
-                           <img src="https://picsum.photos/id/1/80/120" alt="Avatar"  class="avatar size-largest border-red" >
-                       </div>
+                <div class="iframe-code">
+                    <script src="https://gist.github.com/stutisk/8341bdcc6e2a3fda5c7c2b3c4da624a9.js"></script>
                 </div>
-        </div> -->
 
-
+                
+                <h2>border Avatars:</h2>
+                <div class="content-subtitle">
+                    border can be added in avatars using   <code>border-green or border-red </code> class to the existing avatar
+                    class. you can change the color of the border 
+                </div>
+                <div class="code-container">
+                <div>
+                    <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-larger border-green">
+                    <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-largest border-red">
+                </div>
+                </div>
+                <div class="iframe-code">
+                    <script src="https://gist.github.com/stutisk/5cf893552cf0358c825d321b92dcc691.js"></script>
+                </div>
+                
             </div>
-            <script src="style.js"></script>
+        </div>
+
+
+    </div>
+    <script src="style.js"></script>
 </body>
 
 </html>
