--- a/docs/base.css
+++ b/docs/base.css
@@ -14,6 +14,10 @@
     --grey-color:grey;
     --cartbtn-background-color-primary:yellow;
     --cartbtn-background-color-secondary:orange;
+    --primary-color-light-red: rgb(238, 68, 68);
+    
+    --online-background-color: rgb(3, 73, 18);
+    --offline-background-color: rgb(138, 136, 136);
 
 
     /* font-size */
