feat:changes in html

--- a/components/badges/badges.html
+++ b/components/badges/badges.html
@@ -79,7 +79,7 @@
                     Badges
                 </div>
                 <div class="content-subtitle">
-                    Badges are small circles, positioned either at top-right or bottom-right of the parent component. 
+                    Badges are small circles, positioned either at top-right or bottom-right of the parent component.
                 </div>
                 <h2> Badges on Icons:</h2>
                 <div class="content-subtitle">
@@ -104,6 +104,10 @@
                             class="avatar ">
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 </html>
