--- a/components/avatar.html/avatar.html
+++ b/components/avatar.html/avatar.html
@@ -58,7 +58,7 @@
                         </nav>
                         <nav class="drawer-navigation">
                             <a class="active" href="avatar.html">Avatar</a>
-                            <a href="alerts.html">Alert</a>
+                            <a href="../../components/alerts.html">Alert</a>
                             <a href="badges.html">Badge</a>
                             <a href="button.html">Buttons</a>
                             <a href="cards.html">Card</a>
