--- a/components/avatar.html/avatar.css
+++ b/components/avatar.html/avatar.css
@@ -1,20 +1,20 @@
 .avatar {
-    width: 50px;
-    height: 50px;
+    width: 3 rem;
+    height: 3 rem;
     border-radius: 50%;
   }
 
   .size-large{
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
   }
   .size-larger{
     width: 90px;
     height: 90px;
   }
   .size-largest{
-    width: 100px;
-    height: 100px;
+    width: 5.625rem;
+    height: 5.625rem;
   }
   .square{
     border-radius: 2%;
