--- a/components/badges/badges.html
+++ b/components/badges/badges.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>badges</title>
+
     <link rel="stylesheet" href="../../docs/components.css">
     <link rel="stylesheet" href="../../landing page/style.css">
     <link rel="stylesheet" href="../../docs/navigation.css">
     <link rel="stylesheet" href="../../docs/sidebar.css">
     <link rel="stylesheet" href="../../docs/documentation.css">
     <link rel="stylesheet" href="badges.css">
+    <script src="https://kit.fontawesome.com/17540dc721.js" crossorigin="anonymous"></script>>
+    <title>badges</title>
 </head>
-<script src="https://kit.fontawesome.com/17540dc721.js" crossorigin="anonymous"></script>
 
 <body>
     <div class="container">
@@ -55,8 +56,8 @@
                             <hr />
                         </nav>
                         <nav class="drawer-navigation">
-                            <a href="/components/avatar/avatar.html">Avatar</a>
-                            <a href="/components/alerts/alerts.html">Alert</a>
+                            <a href="/components/">Avatar</a>
+                            <a href="alerts.html">Alert</a>
                             <a class="active" href="badges.html">Badge</a>
                             <a href="button.html">Buttons</a>
                             <a href="cards.html">Card</a>
@@ -73,6 +74,7 @@
                     </aside>
                 </div>
             </div>
+
             <!-- content -->
             <div class="content">
                 <div class="content-title">
@@ -91,6 +93,9 @@
                     <div class="badge message"><i title="envelope" class="fas fa fa-envelope fa-2x"></i></div>
 
                 </div>
+                <div class="iframe-code">
+                    <script src="https://gist.github.com/stutisk/7aecd036fc2b8c90672e0e7055e6979f.js"></script>
+                </div>
                 <h2> Badges on Avatars:</h2>
                 <div class="content-subtitle">
                     badges on avatars tells us about the status of user whether he is <code> online / offline </code>.
@@ -104,11 +109,14 @@
                             class="avatar ">
                     </div>
                 </div>
+                <div class="iframe-code">
+                    <script src="https://gist.github.com/stutisk/d3a72dd72b4377f75b2691d1d6eb2228.js"></script>
+                    </div>
             </div>
         </div>
     </div>
-    
-    
+
+
 </body>
 
 </html>
