--- a/components/badges/badges.css
+++ b/components/badges/badges.css
@@ -12,12 +12,12 @@
     border-radius: 50%;
     color: var( --text-secondry);
     position: absolute;
-    bottom: 25px;
-    left: 30px;
-    width: 20px;
-    height: 20px;
+    bottom: 	1.375rem;
+    left: 1.625rem;
+    width: 1.25rem;
+    height: 1.25rem;
     text-align: center;
-    padding: 1px;
+    padding: 2px;
 
 }
 
@@ -43,7 +43,6 @@
     text-align: center;
     width: 12px;
     height: 12px;
-    border-radius: 50%;
     background-color: var(--online-background-color);
     border: 2px solid var(--secondry-color);
 
