feat:removed  extrs span

--- a/components/buttons/button.html
+++ b/components/buttons/button.html
@@ -21,10 +21,6 @@
         <nav class="nav-bar">
             <div class="left-side">
                 <a href="../../index.html">GALA<span class="span">X!A</span></a>
-
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
                 </a>
 
             </div>
@@ -57,9 +53,9 @@
                         </nav>
                         <nav class="drawer-navigation">
                             <a href="avatar.html">Avatar</a>
-                            <a  href="alerts.html">Alert</a>
+                            <a href="alerts.html">Alert</a>
                             <a href="badges.html">Badge</a>
-                            <a  class="active" href="button.html">Buttons</a>
+                            <a class="active" href="button.html">Buttons</a>
                             <a href="cards.html">Card</a>
                             <a href="images.html">Image</a>
                             <a href="input.html">Input</a>
@@ -80,7 +76,7 @@
                     Button
                 </div>
                 <div class="content-subtitle">
-                    buttons are  used to submit forms in a document .Apperance of buttons can be changed using CSS
+                    buttons are used to submit forms in a document .Apperance of buttons can be changed using CSS
                 </div>
 
                 <div class="content-subtitle">
@@ -88,7 +84,7 @@
                 </div>
                 <h2>Primary Buttons:</h2>
                 <div class="content-subtitle">
-                   Primary buttons play a role of CTA buttons . use primary buttons when you want user's attention !
+                    Primary buttons play a role of CTA buttons . use primary buttons when you want user's attention !
                 </div>
                 <div class="code-container">
                     <div class="btns">
@@ -105,7 +101,7 @@
                 </div>
                 <h2>Secondary Buttons:</h2>
                 <div class="content-subtitle">
-                    Use secondry buttons when you  dont want user's attention !
+                    Use secondry buttons when you dont want user's attention !
                 </div>
                 <div class="code-container">
                     <div>
@@ -119,17 +115,17 @@
                 <div class="iframe-code">
                     <script src="https://gist.github.com/stutisk/b6eed90a5aa7e23df8ec301a387dacc4.js"></script>
                 </div>
-                 <h2>Buttons With Links:</h2>
+                <h2>Buttons With Links:</h2>
                 <div class="content-subtitle">
-                   Use Link Button to attach a link on your buttons. 
+                    Use Link Button to attach a link on your buttons.
                 </div>
                 <div class="code-container">
                     <div>
-                        <button class="primary-btn link-btn m-5 btn-padding"> <a class="btn-link" href="https://www.google.com/"
-                                target="_blank"> CLICK HERE</a>
+                        <button class="primary-btn link-btn m-5 btn-padding"> <a class="btn-link"
+                                href="https://www.google.com/" target="_blank"> CLICK HERE</a>
                         </button>
-                        <button class="secondry-btn link-btn m-5 btn-padding"> <a  class="btn-link" href="https://www.google.com/"
-                                target="_blank"> CLICK HERE</a>
+                        <button class="secondry-btn link-btn m-5 btn-padding"> <a class="btn-link"
+                                href="https://www.google.com/" target="_blank"> CLICK HERE</a>
                         </button>
                     </div>
                 </div>
@@ -138,7 +134,7 @@
                 </div>
                 <h2>Buttons With Icons:</h2>
                 <div class="content-subtitle">
-                  It makes the user more clear about the purpose of the button . 
+                    It makes the user more clear about the purpose of the button .
                 </div>
                 <div class="code-container">
                     <div>
@@ -162,7 +158,7 @@
                 </div>
                 <h2> Float Buttons :</h2>
                 <div class="content-subtitle">
-                These buttons are going to be fixed at the right bottom corner .
+                    These buttons are going to be fixed at the right bottom corner .
                 </div>
                 <div class="code-container">
 
