--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
     <link rel="stylesheet" href="../../docs/components.css">
     <link rel="stylesheet" href="../../landing page/style.css">
-    <link rel="stylesheet" href="../../docs/navigation.css">
-    <link rel="stylesheet" href="../../docs/sidebar.css">
-    <link rel="stylesheet" href="../../docs/documentation.css">
     <link rel="stylesheet" href="avatar.css">
+    <title>Avatar||GALAXIA</title>
 
     <script src="https://kit.fontawesome.com/17540dc721.js" crossorigin="anonymous"></script>>
 
@@ -22,19 +20,15 @@
         <nav class="nav-bar ">
             <div class="left-side">
                 <a href="../../index.html">GALA<span class="span">X!A</span></a>
-
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
                 </a>
 
             </div>
             <div class="right-side">
                 <ul>
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a onclick="myFunction()" href="#"><i class="fa fa-moon-o" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/stutisk/GALAXIA-component_library"><i class="fa fa-github"></i></a>
+                    </li>
+                    <li><a href="https://twitter.com/StutiKumari13"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-moon-o" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </nav>
@@ -48,28 +42,21 @@
                             <hr />
                         </div>
                         <nav class="drawer-navigation ">
-                            <a href="">Introduction</a>
-                            <a href="">Color</a>
-                            <a href="">Typoraphy</a>
-                            <a href="">Conclusion</a>
-
+                            <a href="">Installation</a>
                             <div class="drawer-topic">Components</div>
                             <hr />
                         </nav>
                         <nav class="drawer-navigation">
                             <a class="active" href="avatar.html">Avatar</a>
-                            <a href="../../components/alerts.html">Alert</a>
-                            <a href="badges.html">Badge</a>
-                            <a href="button.html">Buttons</a>
-                            <a href="cards.html">Card</a>
-                            <a href="images.html">Image</a>
-                            <a href="input.html">Input</a>
-                            <a href="">Text utilities</a>
-                            <a href="">Lists</a>
-                            <a href="">Navigation</a>
-                            <a href="">rating</a>
-                            <a href="">Toast</a>
-                            <a href="">simplified grid</a>
+                            <a href="../alerts/alerts.html">Alert</a>
+                            <a href="../badges/badges.html">Badge</a>
+                            <a href="../buttons/button.html">Buttons</a>
+                            <a href="../cards/cards.html">Card</a>
+                            <a href="../images/images.html">Image</a>
+                            <a href="../input/input.html">Input</a>
+                            <a href="../typography/typography.html">Text utilities</a>
+                            <a href="../lists/lists.html">Lists</a>
+                            <a href="../navigation/navigation.html">Navigation</a>
                         </nav>
 
                     </aside>
@@ -83,7 +70,7 @@
 
                 <div class="content-subtitle">
                     Avatar can be used to show user's profile picture or their status on different platforms.
-                    Simple Avatars can be created using <code>avatar</code>  class.Avatars are user profile pictures,
+                    Simple Avatars can be created using <code>avatar</code> class.Avatars are user profile pictures,
                     usually found in circular shapes.Avatars help people create their
                     own identity.
                 </div>
@@ -91,12 +78,13 @@
                 <!-- avatar -->
                 <h2>Size Avatars:</h2>
                 <div class="content-subtitle">
-                    Size of the avatars can be changed by adding <code>size-larger/size-larger</code> class to the existing avatar
+                    Size of the avatars can be changed by adding <code>size-larger/size-larger</code> class to the
+                    existing avatar
                     class.
                 </div>
                 <div class="code-container">
                     <div>
-                        <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar">
+                        <img src="https://picsum.photos/id/1/40/40" alt="Avatar" class="avatar">
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar " class="avatar size-large">
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-larger">
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-largest">
@@ -114,7 +102,7 @@
 
                 <div class="code-container">
                     <div>
-                        <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar square">
+                        <img src="https://picsum.photos/id/1/40/40" alt="Avatar" class="avatar square">
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar " class="avatar size-large square">
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-larger square">
                         <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-largest square">
@@ -124,22 +112,25 @@
                     <script src="https://gist.github.com/stutisk/8341bdcc6e2a3fda5c7c2b3c4da624a9.js"></script>
                 </div>
 
-                
+
                 <h2>border Avatars:</h2>
                 <div class="content-subtitle">
-                    border can be added in avatars using   <code>border-green or border-red </code> class to the existing avatar
-                    class. you can change the color of the border 
+                    border can be added in avatars using <code>border-green or border-red </code> class to the existing
+                    avatar
+                    class. you can change the color of the border
                 </div>
                 <div class="code-container">
-                <div>
-                    <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-larger border-green">
-                    <img src="https://picsum.photos/id/1/80/120" alt="Avatar" class="avatar size-largest border-red">
-                </div>
+                    <div>
+                        <img src="https://picsum.photos/id/1/40/40" alt="Avatar"
+                            class="avatar size-larger border-green">
+                        <img src="https://picsum.photos/id/1/80/120" alt="Avatar"
+                            class="avatar size-largest border-red">
+                    </div>
                 </div>
                 <div class="iframe-code">
                     <script src="https://gist.github.com/stutisk/5cf893552cf0358c825d321b92dcc691.js"></script>
                 </div>
-                
+
             </div>
         </div>
 
