--- a/components/cards/cards.html
+++ b/components/cards/cards.html
@@ -8,27 +8,24 @@
 
     <link rel="stylesheet" href="../../docs/components.css">
     <link rel="stylesheet" href="../../landing page/style.css">
-    <link rel="stylesheet" href="../../docs/navigation.css">
-    <link rel="stylesheet" href="../../docs/sidebar.css">
-    <link rel="stylesheet" href="../../docs/documentation.css">
     <link rel="stylesheet" href="cards.css">
     <script src="https://kit.fontawesome.com/17540dc721.js" crossorigin="anonymous"></script>>
-    <title>Cards</title>
+    <title>Cards||GALAXIA</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="nav-bar">
             <div class="left-side">
-                <a href="index.html">GALA<span class="span">X!A</span></a>
+                <a href="/index.html">GALA<span class="span">X!A</span></a>
                 </a>
             </div>
             <div class="right-side">
                 <ul>
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a onclick="myFunction()" href="#"><i class="fa fa-moon-o" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/stutisk/GALAXIA-component_library"><i class="fa fa-github"></i></a>
+                    </li>
+                    <li><a href="https://twitter.com/StutiKumari13"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-moon-o" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </nav>
@@ -42,28 +39,22 @@
                             <hr />
                         </div>
                         <nav class="drawer-navigation ">
-                            <a href="">Introduction</a>
-                            <a href="">Color</a>
-                            <a href="">Typoraphy</a>
-                            <a href="">Conclusion</a>
+                            <a href="">Installation</a>
 
                             <div class="drawer-topic">Components</div>
                             <hr />
                         </nav>
                         <nav class="drawer-navigation">
-                            <a href="avatar.html">Avatar</a>
-                            <a href="alerts.html">Alert</a>
-                            <a href="badges.html">Badge</a>
-                            <a href="button.html">Buttons</a>
-                            <a class="active" href="cards.html">Card</a>
-                            <a href="images.html">Image</a>
-                            <a href="input.html">Input</a>
-                            <a href="">Text utilities</a>
-                            <a href="">Lists</a>
-                            <a href="">Navigation</a>
-                            <a href="">rating</a>
-                            <a href="">Toast</a>
-                            <a href="">simplified grid</a>
+                            <a  href="avatar.html">Avatar</a>
+                            <a href="../alerts/alerts.html">Alert</a>
+                            <a href="../badges/badges.html">Badge</a>
+                            <a href="../buttons/button.html">Buttons</a>
+                            <a class="active" href="../cards/cards.html">Card</a>
+                            <a href="../images/images.html">Image</a>
+                            <a href="../input/input.html">Input</a>
+                            <a href="../typography/typography.html">Text utilities</a>
+                            <a href="../lists/lists.html">Lists</a>
+                            <a href="../navigation/navigation.html">Navigation</a>
                         </nav>
 
                     </aside>
