made suggested changes

--- a/components/installation/installation.html
+++ b/components/installation/installation.html
@@ -66,25 +66,19 @@
                 <div class="content-title">
                     Installation
                 </div>
-
-                <div class="content-subtitle">
-
-                </div>
-
-                <!-- avatar -->
+                <!-- installation -->
                 <h2>Getting Started:</h2>
                 <div class="content-subtitle">
                     In order to introduce Galaxia to your project, Copy the Link given below and paste it in the
+
                     <head> tag of your html, above all other style sheets.
-                        To know about the styled components, their variations, go through all the components 
+                        To know about the styled components, their variations, go through all the components
                 </div>
                 <div class="iframe-code">
                     <script src="https://gist.github.com/stutisk/2d5c36ba8d7c0ae3939f5e0165e500ce.js"></script>
                 </div>
             </div>
         </div>
-
-
     </div>
     <script src="style.js"></script>
 </body>
