feat:added installation link

--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -42,7 +42,7 @@
                             <hr />
                         </div>
                         <nav class="drawer-navigation ">
-                            <a href="">Installation</a>
+                            <a href="/components/installation/installation.html">Installation</a>
                             <div class="drawer-topic">Components</div>
                             <hr />
                         </nav>
