--- a/components/buttons/button.html
+++ b/components/buttons/button.html
@@ -39,7 +39,7 @@
                             <hr />
                         </div>
                         <nav class="drawer-navigation ">
-                            <a href="">Installation</a>
+                            <a href="/components/installation/installation.html">Installation</a>
 
                             <div class="drawer-topic">Components</div>
                             <hr />
