--- a/components/images/images.html
+++ b/components/images/images.html
@@ -41,7 +41,7 @@
                             <hr />
                         </div>
                         <nav class="drawer-navigation ">
-                            <a href="">Installation</a>
+                            <a href="/components/installation/installation.html">Installation</a>
 
                             <div class="drawer-topic">Components</div>
                             <hr />
