--- a/components/input/input.html
+++ b/components/input/input.html
@@ -40,7 +40,7 @@
                             <hr />
                         </div>
                         <nav class="drawer-navigation ">
-                            <a href="">Installation</a>
+                            <a href="/components/installation/installation.html">Installation</a>
 
                             <div class="drawer-topic">Components</div>
                             <hr />
