--- a/components/buttons/button.html
+++ b/components/buttons/button.html
@@ -55,6 +55,7 @@
                             <a href="../typography/typography.html">Text utilities</a>
                             <a href="../lists/lists.html">Lists</a>
                             <a href="../navigation/navigation.html">Navigation</a>
+                            <a  href="../grids/grids.html">Grids</a>
                         </nav>
 
                     </aside>
