--- a/components/images/images.html
+++ b/components/images/images.html
@@ -57,6 +57,7 @@
                             <a href="../typography/typography.html">Text utilities</a>
                             <a href="../lists/lists.html">Lists</a>
                             <a href="../navigation/navigation.html">Navigation</a>
+                            <a  href="../grids/grids.html">Grids</a>
                         </nav>
 
                     </aside>
