--- a/docs/base.css
+++ b/docs/base.css
@@ -18,7 +18,7 @@
     
     --online-background-color: rgb(3, 73, 18);
     --offline-background-color: rgb(138, 136, 136);
-
+    --main-background-color:#fdfdfd;
 
     /* font-size */
     --size-point:0.5rem;
