--- a/docs/navigation.css
+++ b/docs/navigation.css
@@ -3,7 +3,7 @@
 }
 
 .nav-bar {
-    background-color:var(--secondry-color);
+    background-color:var(--main-background-color);
 box-shadow: 0px 3px 7px -3px #0a7c7090;
     width: 100%;
     height: 70px;
