feat:addd ratings documetation

--- a/components/ratings/ratings.html
+++ b/components/ratings/ratings.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="../../docs/components.css">
     <link rel="stylesheet" href="../../landing page/style.css">
-    <link rel="stylesheet" href="badges.css">
+    <link rel="stylesheet" href="Typography.css">
     <script src="https://kit.fontawesome.com/7f4b9645a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="ratings.css">
-    <title>Badges||GALAXIA</title>
+    <title>Typography||GALAXIA</title>
 </head>
 
 <body>
@@ -47,7 +46,7 @@
                             <hr />
                         </nav>
                         <nav class="drawer-navigation">
-                            <a href="../avatar/avatar.html">Avatar</a>
+                            <a  href="avatar.html">Avatar</a>
                             <a href="../alerts/alerts.html">Alert</a>
                             <a href="../badges/badges.html">Badge</a>
                             <a href="../buttons/button.html">Buttons</a>
@@ -59,21 +58,22 @@
                             <a href="../navigation/navigation.html">Navigation</a>
                             <a class="active" href="../ratings/ratings.html">Ratings</a>
                         </nav>
+
                     </aside>
                 </div>
             </div>
-
             <!-- content -->
             <div class="content">
                 <div class="content-title">
                     Ratings
                 </div>
                 <div class="content-subtitle">
-                    Badges are small circles, positioned either at top-right or bottom-right of the parent component.
+                    Ratings play an important role in E-commerce website.it gives us an overview on the average ratings
+                    of the products orthe services
                 </div>
                 <h2> Star Ratings:</h2>
                 <div class="content-subtitle">
-                    badges can be put on icons which tells us about the number of elements .
+                    Star ratngs helps in giving live rating . It is used when we want the ratings from the user.
                 </div>
                 <div class="code-container">
                     <div>
@@ -87,32 +87,33 @@
 
                 </div>
                 <div class="iframe-code">
-                    <script src="https://gist.github.com/stutisk/7aecd036fc2b8c90672e0e7055e6979f.js"></script>
+                    <script src="https://gist.github.com/stutisk/35c9c00e270cbe403138ead2db1541f6.js"></script>
                 </div>
-                <h2> Smiley Ratings:</h2>
+                <h2> Badge Ratings:</h2>
                 <div class="content-subtitle">
-                    badges can be put on icons which tells us about the number of elements .
+                    These are read only ratings .
                 </div>
                 <div class="code-container">
                     <div>
-                        <span class="ratings rated"><i class="fas fa-smile"></i></span>
-                        <span class="ratings rated"><i class="fas fa-smile"></i></span>
-                        <span class="ratings rated"><i class="fas fa-smile"></i></span>
-                        <span class="ratings"><i class="fas fa-smile"></i></span>
-                        <span class="ratings"><i class="fas fa-smile"></i></span>
+                        <span class="badge-rating padding4-8">
+                            4<i class="fa fa-star"></i>
+                        </span>
+                        <span class="badge-rating padding4-8">
+                            3<i class="fa fa-star"></i>
+                        </span>
+                        <span class="badge-rating padding4-8">
+                            2<i class="fa fa-star"></i>
+                        </span>
                     </div>
-
 
                 </div>
                 <div class="iframe-code">
-                    <script src="https://gist.github.com/stutisk/7aecd036fc2b8c90672e0e7055e6979f.js"></script>
+                    <script src="https://gist.github.com/stutisk/a93c9e468c5c259d608e3815b12a720a.js"></script>
                 </div>
+            </div>
             </div>
         </div>
     </div>
-   
-
-
 </body>
 
 </html>
