--- a/components/ratings/ratings.css
+++ b/components/ratings/ratings.css
@@ -4,3 +4,10 @@
 .rated{
     color:var(--cartbtn-background-color-secondary)
 }
+.badge-rating{
+    background-color:var(--complementary-dark-green-color);
+    border-radius: var(--border-radius2);
+    color:white;
+  
+    font-size: var(--size-0);
+}
