made suggested changes

--- a/components/ratings/ratings.html
+++ b/components/ratings/ratings.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Typography.css">
     <script src="https://kit.fontawesome.com/7f4b9645a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="ratings.css">
-    <title>Typography||GALAXIA</title>
+    <title>Rating||GALAXIA</title>
 </head>
 
 <body>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="content-subtitle">
                     Ratings play an important role in E-commerce website.it gives us an overview on the average ratings
-                    of the products orthe services
+                    of the products or the services
                 </div>
                 <h2> Star Ratings:</h2>
                 <div class="content-subtitle">
