syles:added styles

--- a/docs/base.css
+++ b/docs/base.css
@@ -18,6 +18,7 @@
     
     --online-background-color: rgb(3, 73, 18);
     --offline-background-color: rgb(138, 136, 136);
+    --snackbar-color:#3c3c3c;
 
 
     /* font-size */
